--- a/templates/dashboards/all_teacher_pages/edit_record.html
+++ b/templates/dashboards/all_teacher_pages/edit_record.html
@@ -3,41 +3,187 @@
 {% block section %}
 {% load custom_filters %}
 
-
-<form method="POST">
+<div class="m-3 rounded-lg mb-3" style="background-color: #F9F9F9;">
+<form method="post" action="">
     {% csrf_token %}
-    <table>
+    <div class="p-3" >
+        <h1 class="text-2xl font-bold mb-4">MONTHLY ATTENDANCE SHEET</h1>
+        <table class="min-w-full border-collapse border border-zinc-400">
         <thead>
             <tr>
-                <th>Student</th>
-                <th>Status 1</th>
-                <th>Status 2</th>
+                <th class="border border-zinc-400 bg-blue-200 p-1">STUDENT NAME</th>
+                    {% for day, label, weekday_count in weekdays_in_month %}
+                        <th class="border border-gray-300 bg-zinc-400 p-1">
+                            {{ day }}<br>{{ label }}
+                        </th>
+                    {% endfor %}
             </tr>
         </thead>
         <tbody>
             {% for record in attendance_records %}
             <tr>
-                <td>{{ record.student }}</td>
-                <td>
+                <td class="border border-gray-300 p-1">{{ record.student }}</td>
+                <td class="border border-gray-300">
                     <select name="status1_{{ record.student.id }}" class="custom-select">
-                        <option value="P" {% if record.status1 == "P" %}selected{% endif %}>Present</option>
-                        <option value="A" {% if record.status1 == "A" %}selected{% endif %}>Absent</option>
-                        <option value="D" {% if record.status1 == "D" %}selected{% endif %}>Default</option>
+                        <option value="P" {% if record.status1 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status1 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status1 == "D" %}selected{% endif %}>--</option>
                     </select>
                 </td>
-                <td>
+                <td class="border border-gray-300">
                     <select name="status2_{{ record.student.id }}" class="custom-select">
-                        <option value="P" {% if record.status2 == "P" %}selected{% endif %}>Present</option>
-                        <option value="A" {% if record.status2 == "A" %}selected{% endif %}>Absent</option>
-                        <option value="D" {% if record.status2 == "D" %}selected{% endif %}>Default</option>
+                        <option value="P" {% if record.status2 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status2 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status2 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status3_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status3 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status3 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status3 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status4_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status4 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status4 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status4 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status5_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status5 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status5 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status5 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status6_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status6 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status6 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status6 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status7_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status7 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status7 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status7 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status8_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status8 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status8 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status8 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status9_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status9 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status9 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status9 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status10_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status10 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status10 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status10 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status11_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status11 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status11 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status11 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status12_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status12 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status12 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status12 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status13_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status13 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status13 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status13 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status14_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status14 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status14 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status14 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status15_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status15 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status15 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status15 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status16_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status16 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status16 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status16 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status17_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status17 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status17 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status17 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status18_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status18 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status18 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status18 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status19_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status19 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status19 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status19 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status20_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status20 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status20 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status20 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status21_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status21 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status21 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status21 == "D" %}selected{% endif %}>--</option>
+                    </select>
+                </td>
+                <td class="border border-gray-300">
+                    <select name="status22_{{ record.student.id }}" class="custom-select">
+                        <option value="P" {% if record.status22 == "P" %}selected{% endif %}>&#10003;</option>
+                        <option value="A" {% if record.status22 == "A" %}selected{% endif %}>X</option>
+                        <option value="D" {% if record.status22 == "D" %}selected{% endif %}>--</option>
                     </select>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <button type="submit">Save Attendance</button>
+    <button type="submit" class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg">Save Attendance</button>
 </form>
+</div>
 
 
 
